--- a/public/documentation.html
+++ b/public/documentation.html
@@ -39,18 +39,19 @@
                     <code>
                         {
                             
-                            "title": "Goldeneye",
-                            "genre": {
-                                "name": "action",
-                                "description": "Action movies will contain a lot of violence and stunts."
+                            "Title": "Goldeneye",
+                            "Genre": {
+                                "Name": "action",
+                                "Description": "Action movies will contain a lot of violence and stunts."
                             },
-                            "director": {
-                                "name": "Martin Campbell",
-                                "bio": "Born in a remote village in the Swiss Alps",
-                                "birth": 1954
+                            "Director": {
+                                "Name": "Martin Campbell",
+                                "Bio": "Born in a remote village in the Swiss Alps",
+                                "Birth": 1954,
+                                "Death": "N/A"
                             },
-                            "imageURL": "https://www.imdb.com/title/tt0113189/mediaviewer/rm486027265/?ref_=tt_ov_i",
-                                "featured": false
+                            "ImagePath": "https://www.imdb.com/title/tt0113189/mediaviewer/rm486027265/?ref_=tt_ov_i",
+                            "Featured": false
                         
                         }
                     </code>
@@ -65,8 +66,8 @@
                     A JSON object containing the genre name and description of genre. Example:
                     <code>
                         {
-                            "name": "action",
-                            "description": "Action movies will contain a lot of violence and stunts."
+                            "Name": "Action",
+                            "Description": "Action movies will contain a lot of violence and stunts."
                         }
                     </code>
                 </td>
@@ -80,9 +81,10 @@
                     A JSON object containing the directors bio and birth year. Example:
                     <code>
                         {
-                            "name": "Martin Campbell",
-                            "bio": "Born in a remote village in the Swiss Alps",
-                            "birth": 1954
+                            "Name": "Martin Campbell",
+                            "Bio": "Born in a remote village in the Swiss Alps",
+                            "Birth": 1954,
+                            "Death": "N/A"
                         }
                     </code>
                 </td>
@@ -95,8 +97,10 @@
                     A JSON object holding user data as such:
                     <code>
                         {
-                            "name": "Mary",
-                            "favoriteMovies": []
+                            "Name": "Mary",
+                            "Password": "maryG@gmail.com",
+                            "Birthday": "10-31-1990"
+                            "FavoriteMovies": []
                         }
                     </code>
                 </td>
@@ -104,23 +108,24 @@
                     A JSON object holding the user name along with unique ID. Example:
                     <code>
                         {
-                            "name": "Mary",
-                            "favoriteMovies": [],
-                            "id": "5aa59ee6-e5e3-4515-bb96-3ee3dc874e25"
+                            "Name": "Mary",
+                            "Password": "maryG@gmail.com",
+                            "Birthday": "10-31-1990"
+                            "FavoriteMovies": []
                         }
                     </code>
                 </td>
             </tr>
             <tr>
                 <td>Update user info</td>
-                <td>/users:id</td>
+                <td>/users:username</td>
                 <td>PUT</td>
                 <td>
                     A JSON object containing the chosen key/value pair to update. Example:
                     <code>
                         {
-                            "name": "Kim Updated",
-                            "favoriteMovies": []
+                            "UserName": "kingkenny",
+                            "favoriteMovies": [ ObjectId("6503933cd5ad7180cd9d51cf")]
                         }
                     </code>
                 </td>
@@ -128,57 +133,61 @@
                     A JSON object containing all user information after being updated. Example:
                     <code>
                         {
-                            "id": 1,
-                            "name": "Kim Updated",
-                            "favoriteMovies": []
+                            "UserName": "kingkenny",
+                            "Password": "scottishroyalty",
+                            "Email": "kingkenny@gmail.com"
+                            "FavoriteMovies": [ ObjectId("6503933cd5ad7180cd9d51cf")]
                         }
                     </code>
                 </td>
             </tr>
             <tr>
                 <td>Add a movie to user's favorites list</td>
-                <td>users/:id/:movieTitle</td>
+                <td>users/:username/:movieTitle</td>
                 <td>POST</td>
                 <td>none</td>
                 <td>
                     A JSON object with the updated array of favorite movies:
                     <code>
                         {
-                            "id": 1,
-                            "name": "Kim",
-                            "favoriteMovies": "Goldeneye"
+                            "UserName": "Kim",
+                            "Password":"12345",
+                            "Email": "kim@gmail.com"
+                            "FavoriteMovies": [ ObjectId("6503933cd5ad7180cd9d51cf")]
                         }
                     </code>
                 </td>
             </tr>
             <tr>
                 <td>Remove a movie from user's favorites list</td>
-                <td>/users/:id/:movieTitle</td>
+                <td>/users/:username/:movieTitle</td>
                 <td>DELETE</td>
                 <td>none</td>
                 <td>
                     A JSON object with favorite movie array updated. Example:
                     <code>
                         {
-                            id: 2,
-                            name: "Joe",
-                            favoriteMovies: []
+                            "UserName": "Joe",
+                            "Password": "abcdef",
+                            "Email": "joe@gmail.com"
+                            "FavoriteMovies": []
                         }
                     </code>
                 </td>
             </tr>
             <tr>
                 <td>Delete user's account</td>
-                <td>/users/:id</td>
+                <td>/users/:username</td>
                 <td>DELETE</td>
                 <td>none</td>
                 <td>
                     An updated users JSON object containing the remaining users. Example:
                     <code>
                         {
-                            id: 1,
-                            name: "Kim",
-                            favoriteMovies: []
+                            "UserName": "Kim",
+                            "Password": "12345",
+                            "Email": "kim@gmail.com"
+                            "FavoriteMovies": []
                         }
                     </code>
                 </td>
